--- a/index.html
+++ b/index.html
@@ -205,161 +205,169 @@
                 </div>
             </div>
         </div>
-        <div class="header__menu-wrap --categories">
-            <div class="header__menu-top">
-                <div class="header__menu-category">
-                    <div class="header__menu-category-h">Lifestyle</div>
-                    <ul class="header__menu-category-ul">
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/hudba" style="border-color: #FF65C0;"
-                                class="header__menu-category-li-a">Hudba
+        <div>
+            <div>
+                <div>
+                    <!-- -->
+                    <div>Lifestyle</div>
+                    <ul>
+                        <li>
+                            <a href="https://refresher.sk/hudba">
+                                Hudba
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/moda" style="border-color: #EE8B34;"
-                                class="header__menu-category-li-a">Móda
+                        <li>
+                            <a href="https://refresher.sk/moda">
+                                Móda
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/filmy-a-serialy" style="border-color: #C7A700;"
-                                class="header__menu-category-li-a">Filmy a Seriály
+                        <li>
+                            <a href="https://refresher.sk/filmy-a-serialy">
+                                Seriály
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/tech" style="border-color: #1CDCB1;"
-                                class="header__menu-category-li-a">Tech
+                        <li>
+                            <a href="https://refresher.sk/tech">
+                                Tech
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/zaujimavosti" style="border-color: #FF65C0;"
-                                class="header__menu-category-li-a">Zaujímavosti
+                        <li>
+                            <a href="https://refresher.sk/zaujimavosti">
+                                Zaujímavosti
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/kultura" style="border-color: #AE83FF;"
-                                class="header__menu-category-li-a">Kultúra
+                        <li>
+                            <a href="https://refresher.sk/kultura">
+                                Kultúra
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/gastro" style="border-color: #2EE451;"
-                                class="header__menu-category-li-a">Gastro
+                        <li>
+                            <a href="https://refresher.sk/gastro">
+                                Gastro
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/sport" style="border-color: #34C4F1;"
-                                class="header__menu-category-li-a">Šport
+                        <li>
+                            <a href="https://refresher.sk/sport">
+                                Šport
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/refresher" style="border-color: #9E9E9E;"
-                                class="header__menu-category-li-a">Refresher
+                        <li>
+                            <a href="https://refresher.sk/refresher">
+                                Refresher
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/historia" style="border-color: #AD5B0F;"
-                                class="header__menu-category-li-a">História
+                        <li>
+                            <a href="https://refresher.sk/historia">
+                                História
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/osobnosti" style="border-color: #1194F2;"
-                                class="header__menu-category-li-a">Osobnosti
+                        <li>
+                            <a href="https://refresher.sk/osobnosti">
+                                Osobnosti
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/zdravie" style="border-color: #9AC000;"
-                                class="header__menu-category-li-a">Zdravie
+                        <li>
+                            <a href="https://refresher.sk/zdravie">
+                                Zdravie
                             </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://refresher.sk/politika" style="border-color: #990000;"
-                                class="header__menu-category-li-a">Politika
+                        <li>
+                            <a href="https://refresher.sk/politika">
+                                Politika
                             </a>
                         </li>
                     </ul>
                 </div>
-                <div class="header__menu-category header__menu-category--news">
-                    <div class="header__menu-category-h">Spravodajstvo</div>
-                    <ul class="header__menu-category-ul">
-                        <li class="header__menu-category-li">
-                            <a href="https://news.refresher.sk/slovensko" class="header__menu-category-li-a"
-                                style="border-color: #E01C1C;">Slovensko</a>
+                <div>
+                    <!-- -->
+                    <div>Spravodajstvo</div>
+                    <ul>
+                        <li>
+                            <a href="https://news.refresher.sk/slovensko">
+                                Slovensko
+                            </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://news.refresher.sk/zahranicie" class="header__menu-category-li-a"
-                                style="border-color: #DE8500;">Zahraničie</a>
+                        <li>
+                            <a href="https://news.refresher.sk/zahranicie">
+                                Zahraničie
+                            </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://news.refresher.sk/ekonomika" class="header__menu-category-li-a"
-                                style="border-color: #AC1BC3;">Ekonomika</a>
+                        <li>
+                            <a href="https://news.refresher.sk/ekonomika">
+                                Ekonomika
+                            </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://news.refresher.sk/komentare" class="header__menu-category-li-a"
-                                style="border-color: #579C00;">Komentáre</a>
+                        <li>
+                            <a href="https://news.refresher.sk/komentare">
+                                Komentáre
+                            </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://news.refresher.sk/rozhovory" class="header__menu-category-li-a"
-                                style="border-color: #008970;">Rozhovory</a>
+                        <li>
+                            <a href="https://news.refresher.sk/rozhovory">
+                                Rozhovory
+                            </a>
                         </li>
-                        <li class="header__menu-category-li">
-                            <a href="https://news.refresher.sk/reportaze" class="header__menu-category-li-a"
-                                style="border-color: #0C7ACA;">Reportáže</a>
+                        <li>
+                            <a href="https://news.refresher.sk/reportaze">
+                                Reportáže
+                            </a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="header__menu-mid">
                 <div class="header__menu-category header__menu-category--topics">
-                    <div class="header__menu-category-h">Lifestyle témy</div>
-                    <ul class="header__menu-category-ul">
-                        <li class="header__menu-category-li">
+                    <div>Lifestyle témy</div>
+                    <ul>
+                        <li>
                             <a href="https://refresher.sk/tema/kviz" class="header__menu-category-li-a">Kvíz</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/influenceri"
                                 class="header__menu-category-li-a">Influenceri</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/marvel"
                                 class="header__menu-category-li-a">Marvel</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/soubiznis"
                                 class="header__menu-category-li-a">Šoubiznis</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/vianoce"
                                 class="header__menu-category-li-a">Vianoce</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/svet-marvelu"
                                 class="header__menu-category-li-a">Marvel filmy a seriály</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/reklamy-a-marketing"
                                 class="header__menu-category-li-a">Reklamy a marketing</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/filmy-a-serialy"
                                 class="header__menu-category-li-a">Filmy a seriály</a>
                         </li>
                     </ul>
                 </div>
                 <div class="header__menu-category header__menu-category--topics">
-                    <div class="header__menu-category-h">Spravodajské témy</div>
-                    <ul class="header__menu-category-ul">
-                        <li class="header__menu-category-li">
+                    <div>Spravodajské témy</div>
+                    <ul>
+                        <li>
                             <a href="https://refresher.sk/tema/vlada-roberta-fica"
                                 class="header__menu-category-li-a">Vláda Roberta Fica</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/policia-sr"
                                 class="header__menu-category-li-a">Polícia SR</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/dopravne-spravy"
                                 class="header__menu-category-li-a">Dopravné správy</a>
                         </li>
-                        <li class="header__menu-category-li">
+                        <li>
                             <a href="https://refresher.sk/tema/doprava"
                                 class="header__menu-category-li-a">Doprava</a>
                         </li>
@@ -367,49 +375,49 @@
                 </div>
             </div>
             <div class="header__menu-bot is-shown" data-menu-bot>
-                <div class="header__menu-category">
-                    <div class="header__menu-category-h">Iné formáty</div>
-                    <ul class="header__menu-category-ul">
-                        <li class="header__menu-category-li"><a href="https://refresher.sk/odporucane"
+                <div>
+                    <div>Iné formáty</div>
+                    <ul>
+                        <li><a href="https://refresher.sk/odporucane"
                                 class="header__menu-category-li-a">Odporúčané</a></li>
-                        <li class="header__menu-category-li"><a href="https://refresher.sk/video"
+                        <li><a href="https://refresher.sk/video"
                                 class="header__menu-category-li-a">Video</a></li>
-                        <li class="header__menu-category-li"><a href="https://refresher.sk/podcasty"
+                        <li><a href="https://refresher.sk/podcasty"
                                 class="header__menu-category-li-a">Podcasty</a></li>
-                        <li class="header__menu-category-li"><a href="https://refresher.sk/kvizy"
+                        <li><a href="https://refresher.sk/kvizy"
                                 class="header__menu-category-li-a">Kvízy</a></li>
-                        <li class="header__menu-category-li"><a href="https://refresher.sk/refresher/rozhovory"
+                        <li><a href="https://refresher.sk/refresher/rozhovory"
                                 class="header__menu-category-li-a">Rozhovory</a></li>
                     </ul>
                 </div>
                 <div class="header__menu-category header__menu-category--single">
-                    <div class="header__menu-category-h">Predplatné</div>
-                    <ul class="header__menu-category-ul">
-                        <li class="header__menu-category-li"><a href="https://refresher.sk/odporucane/plus"
+                    <div>Predplatné</div>
+                    <ul>
+                        <li><a href="https://refresher.sk/odporucane/plus"
                                 class="header__menu-category-li-a">Prémiový obsah</a></li>
-                        <li class="header__menu-category-li"><a href="https://refresher.sk/benefity"
+                        <li><a href="https://refresher.sk/benefity"
                                 class="header__menu-category-li-a">Benefity</a></li>
-                        <li class="header__menu-category-li"><a href="https://refresher.sk/plus"
+                        <li><a href="https://refresher.sk/plus"
                                 class="header__menu-category-li-a">Predplatiť</a></li>
                     </ul>
                 </div>
-                <div class="header__menu-category">
-                    <div class="header__menu-category-h">Refresher</div>
-                    <ul class="header__menu-category-ul">
-                        <li class="header__menu-category-li"><a href="https://onas.refresher.sk"
+                <div>
+                    <div>Refresher</div>
+                    <ul>
+                        <li><a href="https://onas.refresher.sk"
                                 class="header__menu-category-li-a">O nás</a></li>
-                        <li class="header__menu-category-li"><a href="https://onas.refresher.sk/#hodnoty"
+                        <li><a href="https://onas.refresher.sk/#hodnoty"
                                 class="header__menu-category-li-a">Hodnoty</a></li>
-                        <li class="header__menu-category-li"><a href="https://insider.refresher.sk"
+                        <li><a href="https://insider.refresher.sk"
                                 class="header__menu-category-li-a">Insider</a></li>
-                        <li class="header__menu-category-li"><a href="https://onas.refresher.sk/kariera"
+                        <li><a href="https://onas.refresher.sk/kariera"
                                 class="header__menu-category-li-a">Kariéra</a></li>
-                        <li class="header__menu-category-li"><a
+                        <li><a
                                 href="https://onas.refresher.sk/vlastnicka-struktura-spolocnosti#historia"
                                 class="header__menu-category-li-a">História</a></li>
-                        <li class="header__menu-category-li"><a href="https://onas.refresher.sk/#kontakt"
+                        <li><a href="https://onas.refresher.sk/#kontakt"
                                 class="header__menu-category-li-a">Kontakt</a></li>
-                        <li class="header__menu-category-li"><a href="https://onas.refresher.sk/reklama"
+                        <li><a href="https://onas.refresher.sk/reklama"
                                 class="header__menu-category-li-a">Reklama</a></li>
                     </ul>
                 </div>
