--- a/index.html
+++ b/index.html
@@ -315,110 +315,152 @@
                     </ul>
                 </div>
             </div>
-            <div class="header__menu-mid">
-                <div class="header__menu-category header__menu-category--topics">
+            <div>
+                <div>
+                    <!-- -->
                     <div>Lifestyle témy</div>
                     <ul>
                         <li>
-                            <a href="https://refresher.sk/tema/kviz" class="header__menu-category-li-a">Kvíz</a>
+                            <a href="https://refresher.sk/tema/kviz">
+                                Kvíz
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/influenceri"
-                                class="header__menu-category-li-a">Influenceri</a>
+                            <a href="https://refresher.sk/tema/influenceri">
+                                Influenceri
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/marvel"
-                                class="header__menu-category-li-a">Marvel</a>
+                            <a href="https://refresher.sk/tema/marvel">
+                                Marvel
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/soubiznis"
-                                class="header__menu-category-li-a">Šoubiznis</a>
+                            <a href="https://refresher.sk/tema/soubiznis">
+                                Šoubiznis
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/vianoce"
-                                class="header__menu-category-li-a">Vianoce</a>
+                            <a href="https://refresher.sk/tema/vianoce">
+                                Vianoce
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/svet-marvelu"
-                                class="header__menu-category-li-a">Marvel filmy a seriály</a>
+                            <a href="https://refresher.sk/tema/svet-marvelu">
+                                Marvel filmy a seriály
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/reklamy-a-marketing"
-                                class="header__menu-category-li-a">Reklamy a marketing</a>
+                            <a href="https://refresher.sk/tema/reklamy-a-marketing">
+                                Reklamy a marketing
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/filmy-a-serialy"
-                                class="header__menu-category-li-a">Filmy a seriály</a>
+                            <a href="https://refresher.sk/tema/filmy-a-serialy">
+                                Filmy a seriály
+                            </a>
                         </li>
                     </ul>
                 </div>
-                <div class="header__menu-category header__menu-category--topics">
+                <div>
+                    <!-- -->
                     <div>Spravodajské témy</div>
                     <ul>
                         <li>
-                            <a href="https://refresher.sk/tema/vlada-roberta-fica"
-                                class="header__menu-category-li-a">Vláda Roberta Fica</a>
+                            <a href="https://refresher.sk/tema/vlada-roberta-fica">
+                                Vláda Roberta Fica
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/policia-sr"
-                                class="header__menu-category-li-a">Polícia SR</a>
+                            <a href="https://refresher.sk/tema/policia-sr">
+                                Polícia SR
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/dopravne-spravy"
-                                class="header__menu-category-li-a">Dopravné správy</a>
+                            <a href="https://refresher.sk/tema/dopravne-spravy">
+                                Dopravné správy
+                            </a>
                         </li>
                         <li>
-                            <a href="https://refresher.sk/tema/doprava"
-                                class="header__menu-category-li-a">Doprava</a>
+                            <a href="https://refresher.sk/tema/doprava">
+                                Doprava
+                            </a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="header__menu-bot is-shown" data-menu-bot>
+            <div>
                 <div>
+                    <!-- -->
                     <div>Iné formáty</div>
                     <ul>
-                        <li><a href="https://refresher.sk/odporucane"
-                                class="header__menu-category-li-a">Odporúčané</a></li>
-                        <li><a href="https://refresher.sk/video"
-                                class="header__menu-category-li-a">Video</a></li>
-                        <li><a href="https://refresher.sk/podcasty"
-                                class="header__menu-category-li-a">Podcasty</a></li>
-                        <li><a href="https://refresher.sk/kvizy"
-                                class="header__menu-category-li-a">Kvízy</a></li>
-                        <li><a href="https://refresher.sk/refresher/rozhovory"
-                                class="header__menu-category-li-a">Rozhovory</a></li>
-                    </ul>
-                </div>
-                <div class="header__menu-category header__menu-category--single">
-                    <div>Predplatné</div>
-                    <ul>
-                        <li><a href="https://refresher.sk/odporucane/plus"
-                                class="header__menu-category-li-a">Prémiový obsah</a></li>
-                        <li><a href="https://refresher.sk/benefity"
-                                class="header__menu-category-li-a">Benefity</a></li>
-                        <li><a href="https://refresher.sk/plus"
-                                class="header__menu-category-li-a">Predplatiť</a></li>
+                        <li>
+                            <a href="https://refresher.sk/odporucane">
+                                Odporúčané
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://refresher.sk/video">
+                                Video
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://refresher.sk/podcasty">
+                                Podcasty
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://refresher.sk/kvizy">
+                                Kvízy
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://refresher.sk/refresher/rozhovory">
+                                Rozhovory
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div>
+                    <!-- -->
+                    <div>Predplatné</div>
+                    <ul>
+                        <li>
+                            <a href="https://refresher.sk/odporucane/plus">
+                                Prémiový obsah
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://refresher.sk/benefity">
+                                Benefity
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://refresher.sk/plus">
+                                Predplatiť
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <!-- -->
                     <div>Refresher</div>
                     <ul>
                         <li><a href="https://onas.refresher.sk"
-                                class="header__menu-category-li-a">O nás</a></li>
+                            >O nás</a></li>
                         <li><a href="https://onas.refresher.sk/#hodnoty"
-                                class="header__menu-category-li-a">Hodnoty</a></li>
+                            >Hodnoty</a></li>
                         <li><a href="https://insider.refresher.sk"
-                                class="header__menu-category-li-a">Insider</a></li>
+                            >Insider</a></li>
                         <li><a href="https://onas.refresher.sk/kariera"
-                                class="header__menu-category-li-a">Kariéra</a></li>
+                            >Kariéra</a></li>
                         <li><a
                                 href="https://onas.refresher.sk/vlastnicka-struktura-spolocnosti#historia"
-                                class="header__menu-category-li-a">História</a></li>
+                            >História</a></li>
                         <li><a href="https://onas.refresher.sk/#kontakt"
-                                class="header__menu-category-li-a">Kontakt</a></li>
+                            >Kontakt</a></li>
                         <li><a href="https://onas.refresher.sk/reklama"
-                                class="header__menu-category-li-a">Reklama</a></li>
+                            >Reklama</a></li>
                     </ul>
                 </div>
                 <div class="project-switch__button">
