--- a/index.html
+++ b/index.html
@@ -446,25 +446,47 @@
                     <!-- -->
                     <div>Refresher</div>
                     <ul>
-                        <li><a href="https://onas.refresher.sk"
-                            >O nás</a></li>
-                        <li><a href="https://onas.refresher.sk/#hodnoty"
-                            >Hodnoty</a></li>
-                        <li><a href="https://insider.refresher.sk"
-                            >Insider</a></li>
-                        <li><a href="https://onas.refresher.sk/kariera"
-                            >Kariéra</a></li>
-                        <li><a
-                                href="https://onas.refresher.sk/vlastnicka-struktura-spolocnosti#historia"
-                            >História</a></li>
-                        <li><a href="https://onas.refresher.sk/#kontakt"
-                            >Kontakt</a></li>
-                        <li><a href="https://onas.refresher.sk/reklama"
-                            >Reklama</a></li>
+                        <li>
+                            <a href="https://onas.refresher.sk">
+                                O nás
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://onas.refresher.sk/#hodnoty">
+                                Hodnoty
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://insider.refresher.sk">
+                                Insider
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://onas.refresher.sk/kariera">
+                                Kariéra
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://onas.refresher.sk/vlastnicka-struktura-spolocnosti#historia">
+                                História
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://onas.refresher.sk/#kontakt">
+                                Kontakt
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://onas.refresher.sk/reklama">
+                                Reklama
+                            </a>
+                        </li>
                     </ul>
                 </div>
-                <div class="project-switch__button">
-                    <a href="https://news.refresher.sk/" class="btn btn-primary btn-icon"><span>PREJSŤ NA NEWS</span>
-                        <i class="icon-caret-right"></i></a>
+                <div>
+                    <a href="https://news.refresher.sk/">
+                        <span>PREJSŤ NA NEWS</span>
+                        <i class="icon-caret-right"></i>
+                    </a>
                 </div>
-                <div class="project-switch__info">Kliknutím na tlačidlo ťa presmerujeme na news.refresher.sk</div>
+                <div>Kliknutím na tlačidlo ťa presmerujeme na news.refresher.sk</div>
