--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div>
                 <div>Kategórie</div>
                 <div>Témy</div>
-                <div class="header__bottom-link--dropdown" data-modal-open="latest">
+                <div>
                     Najnovšie</div>
-                <div class="header__bottom-link--dropdown" data-modal-open="most-read">
+                <div>
                     Najčítanejšie</div>
                 <a href="https://refresher.sk/video">Video</a>
                 <a href="https://refresher.sk/kvizy">Kvízy</a>
